 cnp-ingress-v-214048-pgsql-azyf542.yaml
---
# KubeArmor is an open source software that enables you to protect your cloud workload at run-time.
# To learn more about KubeArmor visit: 
# https://www.accuknox.com/kubearmor/ 
# https://www.stigviewer.com/stig/postgresql_9.x/2021-06-04/finding/V-214048
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-ingress-v-214048-pgsql-n3ompv8
  namespace: kube-system
spec:
  description: "Other ports for pgsql are prohibited."
  endpointSelector: 
    matchLabels:
      controller-revision-hash: 7b445dc7b4
      k8s-app: cilium
      pod-template-generation: 1
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "5432"
